--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="resume-item">
               <h4>Ags Health Pvt Ltd</h4>
               <h5>07/2021-11/2022</h5>
-              <p><em>Bangalore , India</em></p>
+              <p><em>Hyderabad , India</em></p>
               <p>
               <ul>
                 <li>Devops Engineer.</li>
