updated skills section

--- a/index.html
+++ b/index.html
@@ -89,16 +89,20 @@
         </div>
     </section>
 
-    <section id="skills" class="skills-section">
+    <section id="skills" class="skills-section" style="background-image: url('image.png');">
         <div class="container">
             <h2 class="animate__animated animate__fadeInUp">Skills</h2>
             <div class="box animate__animated animate__fadeInUp">
                 <ul class="skills-list">
-                    <li>Proficient in AWS and Google Cloud platforms</li>
-                    <li>Skilled in DevOps practices, specializing in CI/CD</li>
-                    <li>Extensive knowledge in software configuration management (SCM)</li>
-                    <li>Strong background in cloud infrastructure management</li>
-                    <li>Experienced in automation techniques</li>
+                    <li>Continuous Integration/Continuous Deployment (CI/CD)</li>
+                    <li>Cloud Platforms: AWS, Google Cloud, Azure</li>
+                    <li>Containerization: Docker, Kubernetes</li>
+                    <li>Infrastructure as Code: Terraform, CloudFormation</li>
+                    <li>Configuration Management: Ansible, Puppet, Chef</li>
+                    <li>Monitoring and Logging: Prometheus, Grafana, ELK Stack</li>
+                    <li>Scripting: Python, Bash, PowerShell</li>
+                    <li>Version Control: Git, GitHub, GitLab</li>
+                    <li>Agile and Scrum Methodologies</li>
                 </ul>
             </div>
         </div>
