--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
       <h2 class="animate__animated animate__fadeInUp">About Me</h2>
       <div class="box animate__animated animate__fadeInUp">
-        <p>I am a DevOps Engineer with over 3 years of hands-on experience in architecting, deploying, and optimizing cloud solutions... (unchanged)</p>
+        <p>I am a DevOps Engineer with over 6 years of hands-on experience in architecting, deploying, and optimizing cloud solutions. Skilled in DevOps practices, specializing in build and release engineering, ensuring smooth software delivery pipelines and continuous integration/continuous deployment (CI/CD). Extensive knowledge in software configuration management (SCM), adept at implementing best practices to manage code repositories and version control systems effectively. Strong background in cloud infrastructure management, including provisioning, scaling, and monitoring resources to meet performance and availability requirements. Experienced in automation techniques, streamlining workflows and reducing manual efforts across IT operations and cloud environments.</p>
       </div>
     </div>
   </section>
