--- a/index.html
+++ b/index.html
@@ -107,6 +107,25 @@
       </div>
     </div>
   </section>
+   <section id="projects" class="projects-section" style="background-image: url('project.png');">
+    <div class="container">
+      <h2 class="animate__animated animate__fadeInUp">Projects</h2>
+      <div class="box animate__animated animate__fadeInUp">
+        <div class="project">
+          <h3>Jenkins Pipeline Generator using Azure OpenAI</h3>
+          <p>Created a web application that generates Jenkins pipelines based on user prompts using Azure OpenAI. Integrated Azure services, handled authentication, and deployed the app on Azure App Service.</p>
+        </div>
+        <div class="project">
+          <h3>GKE Monitoring with Prometheus and Grafana</h3>
+          <p>Set up Prometheus and Grafana to monitor a Kubernetes cluster hosted on GCP's GKE. Included service discovery, alerting rules, and dashboards for visualizing key metrics.</p>
+        </div>
+        <div class="project">
+          <h3>Azure CI/CD for Microservices</h3>
+          <p>Implemented a microservices deployment strategy using Azure DevOps, ARM templates, Docker, and AKS. Automated builds, tests, and deployments for a scalable service architecture.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- ✅ New Certifications Section -->
   <section id="certifications" class="certifications-section" style="background-image: url('certification.png');">
