--- a/index.html
+++ b/index.html
@@ -108,25 +108,96 @@
     </div>
   </section>
    <section id="projects" class="projects-section" style="background-image: url('project.png');">
-    <div class="container">
-      <h2 class="animate__animated animate__fadeInUp">Projects</h2>
-      <div class="box animate__animated animate__fadeInUp">
-        <div class="project">
-          <h3>Jenkins Pipeline Generator using Azure OpenAI</h3>
-          <p>Created a web application that generates Jenkins pipelines based on user prompts using Azure OpenAI. Integrated Azure services, handled authentication, and deployed the app on Azure App Service.</p>
+        <div class="container">
+            <h2 class="animate__animated animate__fadeInUp">Projects</h2>
+            <div class="projects-grid">
+                <div class="project animate__animated animate__fadeInUp">
+                    <h3>CI/CD Pipeline Implementation</h3>
+                    <div class="box">
+                        <div class="box-content">
+                            <p><strong>Description:</strong> Designed and implemented a CI/CD pipeline using Jenkins and Docker, which automated the build, test, and deployment processes for multiple microservices.</p>
+                            <p><strong>Technologies:</strong> Jenkins, Docker, Git, Kubernetes</p>
+                            <p><strong>Highlights:</strong></p>
+                            <ul>
+                                <li>Reduced deployment time by 50%.</li>
+                                <li>Enabled seamless integration and continuous delivery.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="project animate__animated animate__fadeInUp">
+                    <h3>Cloud Infrastructure Setup</h3>
+                    <div class="box">
+                        <div class="box-content">
+                            <p><strong>Description:</strong> Set up and managed cloud infrastructure on AWS, including VPC, EC2 instances, RDS, and S3 for a high-availability web application.</p>
+                            <p><strong>Technologies:</strong> AWS (EC2, RDS, S3, VPC), Terraform</p>
+                            <p><strong>Highlights:</strong></p>
+                            <ul>
+                                <li>Achieved 99.9% uptime with auto-scaling and load balancing.</li>
+                                <li>Improved resource utilization by 40%.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="project animate__animated animate__fadeInUp">
+                    <h3>Automated Monitoring and Alerts</h3>
+                    <div class="box">
+                        <div class="box-content">
+                            <p><strong>Description:</strong> Implemented a monitoring and alerting system using Prometheus and Grafana, ensuring real-time visibility into application performance and infrastructure health.</p>
+                            <p><strong>Technologies:</strong> Prometheus, Grafana, Alertmanager</p>
+                            <p><strong>Highlights:</strong></p>
+                            <ul>
+                                <li>Set up custom dashboards and alerts, reducing incident response time by 30%.</li>
+                                <li>Enabled proactive monitoring and issue resolution.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="project animate__animated animate__fadeInUp">
+                    <h3>Microservices Architecture Deployment</h3>
+                    <div class="box">
+                        <div class="box-content">
+                            <p><strong>Description:</strong> Deployed a microservices architecture using Kubernetes, ensuring scalable and resilient application components.</p>
+                            <p><strong>Technologies:</strong> Kubernetes, Docker, Helm</p>
+                            <p><strong>Highlights:</strong></p>
+                            <ul>
+                                <li>Improved application scalability and fault tolerance.</li>
+                                <li>Simplified management and deployment of microservices.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="project animate__animated animate__fadeInUp">
+                    <h3>Configuration Management with Ansible</h3>
+                    <div class="box">
+                        <div class="box-content">
+                            <p><strong>Description:</strong> Automated the configuration and management of servers using Ansible, ensuring consistent and repeatable setups across environments.</p>
+                            <p><strong>Technologies:</strong> Ansible, YAML</p>
+                            <p><strong>Highlights:</strong></p>
+                            <ul>
+                                <li>Reduced configuration drift and manual intervention.</li>
+                                <li>Streamlined server provisioning and configuration.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="project animate__animated animate__fadeInUp">
+                    <h3>Containerization and Orchestration</h3>
+                    <div class="box">
+                        <div class="box-content">
+                            <p><strong>Description:</strong> Containerized legacy applications and orchestrated their deployment using Docker and Kubernetes, enhancing application portability and scalability.</p>
+                            <p><strong>Technologies:</strong> Docker, Kubernetes, Docker Compose</p>
+                            <p><strong>Highlights:</strong></p>
+                            <ul>
+                                <li>Reduced deployment complexity and improved resource utilization.</li>
+                                <li>Enabled seamless application updates and rollbacks.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="project">
-          <h3>GKE Monitoring with Prometheus and Grafana</h3>
-          <p>Set up Prometheus and Grafana to monitor a Kubernetes cluster hosted on GCP's GKE. Included service discovery, alerting rules, and dashboards for visualizing key metrics.</p>
-        </div>
-        <div class="project">
-          <h3>Azure CI/CD for Microservices</h3>
-          <p>Implemented a microservices deployment strategy using Azure DevOps, ARM templates, Docker, and AKS. Automated builds, tests, and deployments for a scalable service architecture.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
+    </section>
   <!-- ✅ New Certifications Section -->
   <section id="certifications" class="certifications-section" style="background-image: url('certification.png');">
     <div class="container">
