--- a/index.html
+++ b/index.html
@@ -55,11 +55,15 @@
             <div class="hero-social">
                 <a href="https://www.linkedin.com/in/kalyan-gangadhar/" target="_blank" class="social-link">
                     <i class="fab fa-linkedin-in"></i>
-                
+                </a>
                 <a href="mailto:kalyanappari002@gmail.com" class="social-link">
                     <i class="fas fa-envelope"></i>
                 </a>
+                <a href="https://github.com/kalyan2312" target="_blank" class="social-link">
+                    <i class="fab fa-github"></i>
+                </a>
             </div>
+
         </div>
         <div class="scroll-indicator">
             <div class="scroll-arrow"></div>
